--- a/index.html
+++ b/index.html
@@ -39,24 +39,133 @@
         </div>
     </div>
     <div class="index-menu " >
-        <div class="menu-tips clearfloat">
-            The Menu
-        </div>
+        <div class="menu-tips">The Menu</div>
         <div class="public-container menu-list">
-            <ul>
-                
-            </ul>
-            
+            <ul class="clearfloat">
+                <li class="menu-item clearfloat">
+                    <a class="title" href="">
+                        <h4>Voluptate cillum fugiat.</h4>
+                        <p class="comment">Cheese, tomato, mushrooms, onions.</p>
+                    </a>
+                    <div class="line"></div>
+                    <div class="price">$50</div>
+                </li>
+                <li class="menu-item clearfloat">
+                    <a class="title" href="">
+                        <h4>Voluptate cillum fugiat.</h4>
+                        <p class="comment">Cheese, tomato, mushrooms, onions.</p>
+                    </a>
+                    <div class="line"></div>
+                    <div class="price">$50</div>
+                </li>
+                <li class="menu-item clearfloat">
+                    <a class="title" href="">
+                        <h4>Voluptate cillum fugiat.</h4>
+                        <p class="comment">Cheese, tomato, mushrooms, onions.</p>
+                    </a>
+                    <div class="line"></div>
+                    <div class="price">$50</div>
+                </li>
+                <li class="menu-item clearfloat">
+                    <a class="title" href="">
+                        <h4>Voluptate cillum fugiat.</h4>
+                        <p class="comment">Cheese, tomato, mushrooms, onions.</p>
+                    </a>
+                    <div class="line"></div>
+                    <div class="price">$50</div>
+                </li>
+                <li class="menu-item clearfloat">
+                    <a class="title" href="">
+                        <h4>Voluptate cillum fugiat.</h4>
+                        <p class="comment">Cheese, tomato, mushrooms, onions.</p>
+                    </a>
+                    <div class="line"></div>
+                    <div class="price">$50</div>
+                </li>
+                <li class="menu-item clearfloat">
+                    <a class="title" href="">
+                        <h4>Voluptate cillum fugiat.</h4>
+                        <p class="comment">Cheese, tomato, mushrooms, onions.</p>
+                    </a>
+                    <div class="line"></div>
+                    <div class="price">$50</div>
+                </li>
+                </ul>
+                <a class="index-show-more" href="">load more <span>|</span><span class="icon"></span></a>
         </div>
     </div>
     <div class="public-container index-panel " >
-        <div class="index-panel-header">
-            Featured Dishes
+        <div class="index-panel-header clearfloat">
+            <h3>Featured Dishes</h3>
+            <div class="line"></div>
+            <ul class="btn">
+                <li class="btn-item "></li>
+                <li class="btn-item active"></li>
+                <li class="btn-item"></li>
+                <li class="btn-item"></li>
+            </ul>
+        </div>
+        <div class="index-panel-body index-food-list">
+            <ul class="clearfloat">
+                <li class="food-item"><a href="">
+                    <img class="banner" src="images/index-body-food.png" alt="">
+                    <div class="name">Fugiat nulla sint<span class="price">$30</span></div>
+                    <div class="star-bar">
+                        <span class="star"></span>
+                        <span class="star"></span>
+                        <span class="star"></span>
+                        <span class="star"></span>
+                        <span class="star nostar"></span>
+                    </div>
+                </a></li>
+                <li class="food-item"><a href="">
+                    <img class="banner" src="images/index-body-food.png" alt="">
+                    <div class="name">Fugiat nulla sint<span class="price">$30</span></div>
+                    <div class="star-bar">
+                        <span class="star"></span>
+                        <span class="star"></span>
+                        <span class="star"></span>
+                        <span class="star"></span>
+                        <span class="star nostar"></span>
+                    </div>
+                </a></li>
+                <li class="food-item"><a href="">
+                    <img class="banner" src="images/index-body-food.png" alt="">
+                    <div class="name">Fugiat nulla sint<span class="price">$30</span></div>
+                    <div class="star-bar">
+                        <span class="star"></span>
+                        <span class="star"></span>
+                        <span class="star"></span>
+                        <span class="star"></span>
+                        <span class="star nostar"></span>
+                    </div>
+                </a></li>
+                <li class="food-item"><a href="">
+                    <img class="banner" src="images/index-body-food.png" alt="">
+                    <div class="name">Fugiat nulla sint<span class="price">$30</span></div>
+                    <div class="star-bar">
+                        <span class="star"></span>
+                        <span class="star"></span>
+                        <span class="star"></span>
+                        <span class="star"></span>
+                        <span class="star nostar"></span>
+                    </div>
+                </a></li>
+            </ul>
         </div>
     </div>
     <div class="public-container index-panel">
-        <div class="index-panel-header">
-            The Gallery
+        <div class="index-panel-header clearfloat">
+            <h3>Featured Dishes</h3>
+            <div class="line"></div>
+        </div>
+        <div class="index-panel-body index-pics">
+            <a class="pic-col pic-col-m"><img src="images/demo3.png" alt=""></a>
+            <div class="pic-col pic-col-s">
+                <a class="pic-row"><img src="images/demo4.png" alt=""></a>
+                <a class="pic-row"><img src="images/demo5.png" alt=""></a>
+            </div>
+            <a class="pic-col pic-col-l"><img src="images/demo6.png"></a>
         </div>
     </div>
     <div class="public-footer">
